feat: add "utils" package for inner tools, make old code refactoring

--- a/django-blog/templates/dev-index.html
+++ b/django-blog/templates/dev-index.html
@@ -6,17 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
         {% block title %}
-            Dev-index
+            Страница разработчика
         {% endblock title %}
     </title>
     {% comment %} <link rel="stylesheet" href="{% static 'css/style.css' %}"> {% endcomment %}
 </head>
 <body>
-    <h1>{{ user_name }}</h1>
+    <h1>{{ username }}</h1>
     <nav>
         <ul>
             <li><a href="{% url 'dev-index' %}">/DEV/</a></li>
             <li><a href="/admin/">Админка</a></li>
+            <li><a href="{% url 'posts:all' %}">Все посты</a></li>
+            <li><a href="{% url 'posts:create' %}">Новый пост</a></li>
             <li><a href="{% url 'users:register' %}">Зарегистрироваться</a></li>
             <li><a href="{% url 'users:login' %}">Войти</a></li>
             <li><a href="{% url 'users:change_pass' %}">Изменить пароль</a></li>
