feat: add "user's posts" function and do some refactoring

--- a/django-blog/templates/dev-index.html
+++ b/django-blog/templates/dev-index.html
@@ -18,6 +18,7 @@
             <li><a href="{% url 'dev-index' %}">/DEV/</a></li>
             <li><a href="/admin/">Админка</a></li>
             <li><a href="{% url 'posts:all' %}">Все посты</a></li>
+            <li><a href="{% url 'posts:user' %}">Мои посты</a></li>
             <li><a href="{% url 'posts:search' %}">Поиск постов</a></li>
             <li><a href="{% url 'posts:create' %}">Новый пост</a></li>
             <li><a href="{% url 'users:register' %}">Зарегистрироваться</a></li>
