--- a/django-blog/users/templates/users/login.html
+++ b/django-blog/users/templates/users/login.html
@@ -7,7 +7,7 @@
 
 {% block content %}
     <h1>Вход</h1>
-    <form action="{% url 'users:login' %}" method="post">
+    <form action="{% url 'users:login' %}?next={{ request.GET.next }}" method="post">
         {% csrf_token %}
         {{ form }}
         <button>Войти</button>
