--- a/django-blog/templates/dev-index.html
+++ b/django-blog/templates/dev-index.html
@@ -12,20 +12,11 @@
     {% comment %} <link rel="stylesheet" href="{% static 'css/style.css' %}"> {% endcomment %}
 </head>
 <body>
-    <h1>{{ username }}</h1>
+    <h1><a href="{% url "dev-index" %}">{{ user.username }}</a></h1>
     <nav>
-        <ul>
-            <li><a href="{% url 'dev-index' %}">/DEV/</a></li>
-            <li><a href="/admin/">Админка</a></li>
-            <li><a href="{% url 'posts:all' %}">Все посты</a></li>
-            <li><a href="{% url 'posts:user' %}">Мои посты</a></li>
-            <li><a href="{% url 'posts:search' %}">Поиск постов</a></li>
-            <li><a href="{% url 'posts:create' %}">Новый пост</a></li>
-            <li><a href="{% url 'users:register' %}">Зарегистрироваться</a></li>
-            <li><a href="{% url 'users:login' %}">Войти</a></li>
-            <li><a href="{% url 'users:change_pass' %}">Изменить пароль</a></li>
-            <li><a href="{% url 'users:logout' %}">Выйти</a></li>
-        </ul>
+        {% for option in options %}
+            <li><a href="{{ option.url }}">{{ option.text }}</a></li>
+        {% endfor %}
     </nav>
     <main>
         {% block content %}
